# FinTrack

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/: settings.py  urls.py
apps/accounts/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_anonymized_at_user_is_anonymized.py
apps/categories/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
apps/categories/migrations/: 0001_initial.py  0002_categoria_limite_mensal.py  0003_categoria_pilar.py
apps/core/: models.py
apps/finance/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/investments/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
contrib/: env_gen.py
dashboard/: Home.py  utils.py
dashboard/components/: alerts.py  charts.py  kpi_cards.py
dashboard/core/: session.py  theme.py
dashboard/pages/: 1_📊_Dashboard.py  2_💰_Receitas.py  3_💸_Despesas.py  4_🏷️_Categorias.py  4_💳_Cartao_e_Parcelamentos.py  5_👤_Perfil.py  5_📈_Investimentos.py  6_🏷️_Categorias.py  6_💳_Cartao_e_Parcelamentos.py  7_👤_Perfil.py  7_📈_Investimentos.py  8_🎯_Planejamento_Consciente.py
dashboard/repositories/: auth_repository.py  base_repository.py  card_repository.py  category_repository.py  finance_repository.py  investment_repository.py  planning_repository.py
dashboard/services/: auth_service.py  card_service.py  category_service.py  finance_service.py  investment_service.py  planning_service.py
(+7 files in other folders)
